// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer hides the loading indicator after load 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "aspectRatio": 1.7777777777777777,
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
/>
`;

exports[`VideoPlayer load a video and calculate the aspect ratio 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "aspectRatio": 1.7777777777777777,
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
/>
`;

exports[`VideoPlayer renders a loading indicator 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "aspectRatio": 1.7777777777777777,
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
/>
`;

exports[`VideoPlayer renders an error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "aspectRatio": 1.7777777777777777,
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
      }
    }
  >
    The video failed to load :(
  </Text>
</View>
`;

exports[`VideoPlayer shows the loading indicator if the source changes 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "aspectRatio": 1.7777777777777777,
      "backgroundColor": "black",
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;
